--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <title>Habit Tracker</title>
     <link rel="icon" type="image/x-icon" href="images/favicon.png">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/app.css">
 </head>
 <body>
 <header class="bg-dark text-light p-2">
@@ -132,6 +131,14 @@
             <div class="tab-pane fade" id="dashboardTab" role="tabpanel" aria-labelledby="navDashboardTab" tabindex="0">
                 <div class="col-sm-12 col-md-8 bg-light border-dark">
                     <h2>Dashboard</h2>
+                    <div class="d-flex flex-column">
+                        <div class="">
+
+                        </div>
+                        <div class="">
+
+                        </div>
+                    </div>
                     <div class="scorecard">
 
                     </div>
